fin de la premiere page

--- a/page2.html
+++ b/page2.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ecran.css">
-    <script src="ecran.js"></script>
+    <link rel="stylesheet" href="page2.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="beloved"></div>
-    <button onclick="changement()"></button>
+    <div id="principale">
+
+    </div>
 </body>
 </html>
