--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div class="beloved"></div>
-    <button onclick="changement()"></button>
+    <a href="page2.html"></a>
 </body>
 </html>
