changement de plusieurs choses

--- a/page2.html
+++ b/page2.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="page2.css">
-    <title>Document</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.js"></script>
+    <script type="text/javascript" src="page2.js"></script>
+    <title>poem</title>
 </head>
 <body>
+    
     <div id="principale">
-        <p>hello</p>
+        <h1>Poème</h1>
+        <a href="index.html">retour</a>
+        <div id="separation">
+            <p id="poem">
+                Lorsque l'automne arrive au fil des mois<br>
+                Plaisant sentiment et beau souvenirs<br>
+                Refont surface afin de me bénir<br>
+                Renforçant ainsi mon amour pour toi<br><br>
+
+                Lorsque l'hiver arrive doucement<br>
+                Et que le vent hivernale s'installe,<br>
+                En me rechauffant chaleureusement,<br>
+                Tu me donnes un sourire qui m'emballe<br><br>
+
+                Mon amour pour toi ne bougera pas<br>
+                Et grandira et deviendra plus fort<br>
+                Parce que tu es mon précieux trésor<br><br>
+
+                Sans toi, je sais que viendra le trépas<br>
+                A tes côtés, je suis le plus heureux<br>
+                Vivre ma vie avec toi est mon voeux<br><br>
+
+                Tu es mon autre moitié et je t'aime 
+            </p>
+        </div>    
     </div>
+    <div id="confetti"></div>
 </body>
 </html>
