--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ecran.css">
     <script src="ecran.js"></script>
-    <title>Document</title>
+    <title>Happy Birthday my love</title>
 </head>
 <body>
     <div class="beloved"></div>
