--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ecran.css">
     <script src="ecran.js"></script>
+    <link rel="icon" type="image/x-icon" href="pngtree-heart-pixel-art-png-image_8666747-1254137463.png">
     <title>Happy Birthday my love</title>
 </head>
 <body>
