--- a/page2.html
+++ b/page2.html
@@ -7,12 +7,13 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.js"></script>
     <script type="text/javascript" src="page2.js"></script>
     <title>poem</title>
+    <link rel="icon" type="image/x-icon" href="pngtree-heart-pixel-art-png-image_8666747-1254137463.png">
 </head>
 <body>
     
     <div id="principale">
         <h1>Poème</h1>
-        <a href="index.html">retour</a>
+        <a href="index.html">Retour</a>
         <div id="separation">
             <p id="poem">
                 Lorsque l'automne arrive au fil des mois<br>
